# MCP_Server_for_Financial_Analysis

./: .gitignore  README.md  main.py  pyproject.toml  server.py
.github/workflows/: ci.yml
tools/: metrics.py  plot.py  retrieve.py
utils/: calculate_metrics.py  retrieve_data.py  visualization.py
